# -*- cmake -*-

set_property(GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS FALSE)
set(CMAKE_CROSSCOMPILING TRUE)

# Project
PROJECT(Torch)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

#SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake"
#                      "${CMAKE_BINARY_DIR}/cmake" "${CMAKE_MODULE_PATH}")

SET(CMAKE_MODULE_PATH "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_SUBDIR}"  ${CMAKE_MODULE_PATH})

# Torch executables
#SET(WITH_LUA51 ON)
#SET(WITH_LUAROCKS OFF)

SET(CWRAP_CUSTOM_LUA th)
SET(HAS_GCC_ATOMICS_EXITCODE TRUE)
SET(C_HAS_inline_EXITCODE 0)
SET(C_HAS___inline___EXITCODE 0)
set( C_HAS___inline_EXITCODE 0)

MESSAGE(STATUS "CMAKE CXX COMPILER +++++++  ${CMAKE_CXX_COMPILER}")
MESSAGE(STATUS "******** ASM_DEFINES +++++++  ${ASM_DEFINES}")
MESSAGE(STATUS "******** CMAKE_ASM_FLAGS +++++++  ${CMAKE_ASM_FLAGS}")
MESSAGE(STATUS "******** CMAKE_ASM_DEFINES+++++++  ${CMAKE_ASM_DEFINES}")
MESSAGE(STATUS "******** LUAJIT_SYSTEM_MINILUA+++++++  ${LUAJIT_SYSTEM_MINILUA}")

SET(BUILD_STATIC TRUE)

ADD_SUBDIRECTORY(distro)
#ADD_SUBDIRECTORY(distro/exe)
#ADD_SUBDIRECTORY(distro/extra/luaffifb)
#ADD_SUBDIRECTORY(distro/pkg)
#ADD_SUBDIRECTORY(distro/extra)
